# Crafty-UI

./: .gitignore  README.md  default.server.toml  main.py  pyproject.toml  scheduler.py
crafty_UI/: __init__.py  __main__.py  crafttyWSAPI.py  logging_config.py  logparser.py  main.py  main_window.py  server.py
