[project]
name = "crafty-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "black>=26.1.0",
    "colorlog>=6.10.1",
    "crafty-client>=2.0.0",
    "dearpygui>=2.0.0",
    "dearpygui-grid>=1.0.1",
    "toml>=0.10.2",
    "websocket-client>=1.9.0",
]
